[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langchain-doc-client"
version = "0.1.0"
description = "A RAG (Retrieval-Augmented Generation) client implementation"
authors = [
    { name = "Luc EBERT", email = "lucebert@github.com" }
]
dependencies = [
    "asyncpg>=0.30.0",
    "chainlit>=2.2.0",
    "langchain-core>=0.3.34",
    "langgraph-sdk>=0.1.51",
]
requires-python = ">=3.9, <3.12"
readme = "README.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "flake8>=4.0.0",
]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88

